--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ gunicorn==21.2.0
 requests==2.31.0
 python-dotenv==1.0.0
 google-api-python-client==2.114.0
+google-auth==2.23.0
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.1
 flask-cors==4.0.0
 youtube-transcript-api==0.6.1
