--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 flask==2.3.3
 gunicorn==21.2.0
 requests==2.31.0
+urllib3==2.0.7
 python-dotenv==1.0.0
 flask-cors==4.0.0
-youtube-transcript-api==0.6.1
+# Keeping this for reference but using our custom implementation
+# youtube-transcript-api==0.6.1
