--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ requests==2.31.0
 urllib3==2.0.7
 python-dotenv==1.0.0
 flask-cors==4.0.0
-# Keeping this for reference but using our custom implementation
-# youtube-transcript-api==0.6.1
+google-auth==2.23.0
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.95.0
